--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords"
           content=""/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="https://static.kancloud.cn/asset/reader.css?version=2a8f88a0-6ef6-11e8-81df-85283e5f2b04"/>
+    <link rel="stylesheet" href="/assets/css/reader.css"/>
 </head>
 <body>
 <div id="main">
@@ -143,7 +143,7 @@
         "style":""
     }
 </script>
-<script type="text/javascript" src="https://static.kancloud.cn/asset/reader.js?version=2a8f88a0-6ef6-11e8-81df-85283e5f2b04"></script>
+<script type="text/javascript" src="/assets/js/reader.js"></script>
 <script type="text/javascript">
     kancloud.bootstrap();
 </script>
@@ -160,7 +160,7 @@
         dimension1:63722
     });
 </script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
+<script async src='/assets/js/analytics.js'></script>
 <!-- End Google Analytics -->
 </body>
 </html>
