--- a/application/admin/view/common/header.html
+++ b/application/admin/view/common/header.html
@@ -28,29 +28,29 @@
                     <a href="__PUBLIC__" target="_blank"><i class="fa fa-home" style="font-size:14px;"></i></a>
                 </li>
 
-                <li class="dropdown notifications-menu hidden-xs">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="fa fa-bell-o"></i>
-                        <span class="label label-warning"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li class="header">{:__('Latest news')}</li>
-                        <li>
-                            <!-- FastAdmin最新更新信息,你可以替换成你自己站点的信息,请注意修改public/assets/js/backend/index.js文件 -->
-                            <ul class="menu">
+                <!--<li class="dropdown notifications-menu hidden-xs">-->
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+                        <!--<i class="fa fa-bell-o"></i>-->
+                        <!--<span class="label label-warning"></span>-->
+                    <!--</a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li class="header">{:__('Latest news')}</li>-->
+                        <!--<li>-->
+                            <!--&lt;!&ndash; FastAdmin最新更新信息,你可以替换成你自己站点的信息,请注意修改public/assets/js/backend/index.js文件 &ndash;&gt;-->
+                            <!--<ul class="menu">-->
 
-                            </ul>
-                        </li>
-                        <li class="footer"><a href="#" target="_blank">{:__('View more')}</a></li>
-                    </ul>
-                </li>
+                            <!--</ul>-->
+                        <!--</li>-->
+                        <!--<li class="footer"><a href="#" target="_blank">{:__('View more')}</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
 
                 <!-- 账号信息下拉框 -->
-                <li class="hidden-xs">
-                    <a href="javascript:;" data-toggle="checkupdate" title="{:__('Check for updates')}">
-                        <i class="fa fa-refresh"></i>
-                    </a>
-                </li>
+                <!--<li class="hidden-xs">-->
+                    <!--<a href="javascript:;" data-toggle="checkupdate" title="{:__('Check for updates')}">-->
+                        <!--<i class="fa fa-refresh"></i>-->
+                    <!--</a>-->
+                <!--</li>-->
 
                 <!-- 清除缓存 -->
                 <li>
@@ -103,19 +103,19 @@
                             </p>
                         </li>
                         <!-- Menu Body -->
-                        <li class="user-body">
-                            <div class="row">
-                                <div class="col-xs-4 text-center">
-                                    <a href="https://www.fastadmin.net" target="_blank">{:__('FastAdmin')}</a>
-                                </div>
-                                <div class="col-xs-4 text-center">
-                                    <a href="https://forum.fastadmin.net" target="_blank">{:__('Forum')}</a>
-                                </div>
-                                <div class="col-xs-4 text-center">
-                                    <a href="https://doc.fastadmin.net" target="_blank">{:__('Docs')}</a>
-                                </div>
-                            </div>
-                        </li>
+                        <!--<li class="user-body">-->
+                            <!--<div class="row">-->
+                                <!--<div class="col-xs-4 text-center">-->
+                                    <!--<a href="https://www.fastadmin.net" target="_blank">{:__('FastAdmin')}</a>-->
+                                <!--</div>-->
+                                <!--<div class="col-xs-4 text-center">-->
+                                    <!--<a href="https://forum.fastadmin.net" target="_blank">{:__('Forum')}</a>-->
+                                <!--</div>-->
+                                <!--<div class="col-xs-4 text-center">-->
+                                    <!--<a href="https://doc.fastadmin.net" target="_blank">{:__('Docs')}</a>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</li>-->
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
